--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -54,11 +54,11 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest
+          pip install pytest pytest-mock
           pip install -r requirements.txt
       
       - name: Run tests
-        run: pytest
+        run: pytest -v
 
   build-and-push:
     name: Build and Push Docker Image
