--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -8,7 +8,6 @@ on:
   release:
     types: [ published ]
 
-# Add this permissions block
 permissions:
   contents: read
   packages: write
@@ -75,6 +74,10 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
       
+      # Set up QEMU for multi-architecture builds
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      
       # Set up Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -98,11 +101,12 @@ jobs:
             type=semver,pattern={{version}},enable=${{ github.event_name == 'release' }}
             type=sha,format=short
       
-      # Build and push Docker image
+      # Build and push Docker image for multiple platforms
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
           context: .
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
